--- a/src/webapp/templates/authentication/login.html
+++ b/src/webapp/templates/authentication/login.html
@@ -8,11 +8,11 @@
       <h1 class="h3 mb-4 fw-normal mt-5">User Login</h1>
 
       <div class="form-floating mb-3">
-        <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com">
+        <input type="email" class="form-control" id="email" name="email" required>
         <label for="email">Email address</label>
       </div>
       <div class="form-floating mb-3">
-        <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+        <input type="password" class="form-control" id="password" name="password" required>
         <label for="password">Password</label>
       </div>
 
