--- a/src/webapp/templates/authentication/sign_up.html
+++ b/src/webapp/templates/authentication/sign_up.html
@@ -8,19 +8,19 @@
       <h1 class="h3 mb-4 fw-normal mt-5">Sign Up</h1>
 
       <div class="form-floating mb-3">
-        <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com">
+        <input type="email" class="form-control" id="email" name="email" required>
         <label for="email">Email address</label>
       </div>
       <div class="form-floating mb-3">
-        <input type="text" class="form-control" id="username" name="username" placeholder="username">
+        <input type="text" class="form-control" id="username" name="username" required>
         <label for="username">Username</label>
       </div>
       <div class="form-floating mb-3">
-        <input type="password" class="form-control" id="password1" name="password1" placeholder="Password">
+        <input type="password" class="form-control" id="password1" name="password1" required>
         <label for="password1">Password</label>
       </div>
       <div class="form-floating mb-3">
-        <input type="password" class="form-control" id="password2" name="password2" placeholder="Confirm Password">
+        <input type="password" class="form-control" id="password2" name="password2" required>
         <label for="password2">Confirm Password</label>
       </div>
       <button class="btn btn-primary w-100 py-2 mb-5" type="submit">Create Account</button>
