--- a/src/webapp/templates/base.html
+++ b/src/webapp/templates/base.html
@@ -9,9 +9,9 @@
     <title>{% block title %} {% endblock %}</title>
 
     <link type="text/css" rel="stylesheet" href="../static/styles/main.css">
-
   </head>
-  <body>
+
+  <body class="d-flex flex-column h-100">
 
     <!-- navigation bar -->
     <header class="p-3 text-bg-dark">
@@ -38,32 +38,34 @@
       </div>
     </header>
 
-    <!-- message flashing -->
-    {% with messages = get_flashed_messages(with_categories=true) %}
-      {% if messages %}
-        {% for category, message in messages %}
-          {% if category == 'error' %}
-            <div class="alert alert-danger alert-dismissible fade show" role="alert">
-              {{ message }}
-              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
-          {% else %}
-            <div class="alert alert-success alert-dismissible fade show" role="alert">
-              {{ message }}
-              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
-          {% endif %}
-        {% endfor %}
-      {% endif %}
-    {% endwith %}
-
-    <div class="container">
-      {% block content %} {% endblock %}
+    <!-- alert flashing -->
+    <div class="container" id="alertMessage">
+      <!-- backend message flashing -->
+      {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+          {% for category, message in messages %}
+            {% if category == 'error' %}
+              <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+            {% else %}
+              <div class="alert alert-success alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+            {% endif %}
+          {% endfor %}
+        {% endif %}
+      {% endwith %}
     </div>
 
+    <main class="container flex-shrink-0 content">
+      {% block content %} {% endblock %}
+    </main>
+
     <!-- footer -->
-    <div class="container mt-5">
-      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top footer">
+      <footer class="container footer d-flex flex-wrap justify-content-between py-3 border-top sticky-bottom">
         <div class="col-md-4 d-flex align-items-center">
           <span class="mb-3 mb-md-0 text-body-secondary">2024 FUNance v0.1</span>
         </div>
@@ -92,10 +94,11 @@
           </li>
         </ul>
       </footer>
-    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
+    <script src="../static/scripts/index.js" defer></script>
     {% block scripts %} {% endblock %}
   </body>
 </html>
