--- a/src/webapp/templates/portfolio_sim/dashboard.html
+++ b/src/webapp/templates/portfolio_sim/dashboard.html
@@ -4,160 +4,81 @@
 
 {% block content%}
     {% if portfolio_exists %}
-        <main class="col-md-auto ms-sm-auto col-lg-auto">
-            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <h1 class="h1">{{ username }}'s Portfolio</h1>
-                <div class="btn-toolbar mb-2 mb-md-0">
-                    <div class="btn-group mr-3">
-                        <button type="button" class="btn btn-lg btn-outline-secondary">Buy Stocks</button>
-                        <button type="button" class="btn btn-lg btn-outline-secondary">Sell Shares</button>
-                    </div>
-                    <button type="button" class="btn btn-lg btn-outline-secondary dropdown-toggle d-flex align-items-center gap-1">
-                        <div class="d-flex align-items-center">
-                            <span>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar3" viewBox="0 0 16 16">
-                                    <path d="M14 0H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2M1 3.857C1 3.384 1.448 3 2 3h12c.552 0 1 .384 1 .857v10.286c0 .473-.448.857-1 .857H2c-.552 0-1-.384-1-.857z"/>
-                                    <path d="M6.5 7a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m-9 3a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2m3 0a1 1 0 1 0 0-2 1 1 0 0 0 0 2"/>
-                                </svg>
-                            </span>
-                            <span class="ml-2">Button Text</span>
+        <!-- data -->
+        <div id="data-container"
+            data-transactions="{{ transactions }}"
+            data-holdings="{{ holdings }}"
+            data-history="{{ history }}">
+        </div>
+
+        <!-- header -->
+        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+            <h1 class="h1">{{ username }}'s Portfolio</h1>
+            <div class="btn-toolbar mb-2 mb-md-0 button-container">
+                <div class="btn-group mr-5">
+                    <button type="button" class="btn btn-lg btn-outline-secondary" onclick="openBuyPopup()">Buy Stocks</button>
+                    <!-- buy popup -->
+                    <div class="modal" id="buyPopup">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h4 class="modal-title">Buy Stonks!</h4>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <p>Please enter the ticker:</p>
+
+                                    <form method="POST">
+                                        <div class="form-floating mb-4">
+                                            <input type="text" class="form-control" id="ticker" name="ticker" placeholder="Stock Ticker" required>
+                                            <label for="ticker">Stock Ticker</label>
+                                        </div>
+                                        <div class="d-flex justify-content-end button-container">
+                                            <button type="button" class="btn btn-secondary mr-3" data-bs-dismiss="modal">Close</button>
+                                            <button type="submit" class="btn btn-primary">Buy Stock</button>
+                                        </div>
+
+                                    </form>
+                                </div>
+                            </div>
                         </div>
-                    </button>
+                    </div>
+
+                    <button type="button" class="btn btn-lg btn-outline-secondary">Sell Shares</button>
                 </div>
+                <button type="button" class="btn btn-lg btn-outline-secondary">Ticker Lookup</button>
             </div>
-    
+        </div>
+
+        <!-- portfolio value -->
+        <div class="mt-4 mb-3 container">
+            <h2 class="text-center">Your portfolio is worth <strong>${{ portfolio_value }}</strong></h2>
+            <h6 class="text-center"> As of <strong>{{ time }}</strong></h6>
+        </div>
+        
+        {% if has_holdings %}
+            <!-- portfolio plot  -->
             <canvas class="my-4 w-100" id="myChart" width="816" height="344" style="display: block; box-sizing: border-box; height: 275px; width: 652px;"></canvas>
-    
-            <h3>My Holdings</h2>
+            <!-- portfolio holdings -->
+            <h3>My Holdings</h3>
             <div class="table-responsive small">
-                <table class="table table-striped table-sm">
-                    <thead>
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Header</th>
-                        <th scope="col">Header</th>
-                        <th scope="col">Header</th>
-                        <th scope="col">Header</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td>1,001</td>
-                        <td>random</td>
-                        <td>data</td>
-                        <td>placeholder</td>
-                        <td>text</td>
-                    </tr>
-                    <tr>
-                        <td>1,002</td>
-                        <td>placeholder</td>
-                        <td>irrelevant</td>
-                        <td>visual</td>
-                        <td>layout</td>
-                    </tr>
-                    <tr>
-                        <td>1,003</td>
-                        <td>data</td>
-                        <td>rich</td>
-                        <td>dashboard</td>
-                        <td>tabular</td>
-                    </tr>
-                    <tr>
-                        <td>1,003</td>
-                        <td>information</td>
-                        <td>placeholder</td>
-                        <td>illustrative</td>
-                        <td>data</td>
-                    </tr>
-                    <tr>
-                        <td>1,004</td>
-                        <td>text</td>
-                        <td>random</td>
-                        <td>layout</td>
-                        <td>dashboard</td>
-                    </tr>
-                    <tr>
-                        <td>1,005</td>
-                        <td>dashboard</td>
-                        <td>irrelevant</td>
-                        <td>text</td>
-                        <td>placeholder</td>
-                    </tr>
-                    <tr>
-                        <td>1,006</td>
-                        <td>dashboard</td>
-                        <td>illustrative</td>
-                        <td>rich</td>
-                        <td>data</td>
-                    </tr>
-                    <tr>
-                        <td>1,007</td>
-                        <td>placeholder</td>
-                        <td>tabular</td>
-                        <td>information</td>
-                        <td>irrelevant</td>
-                    </tr>
-                    <tr>
-                        <td>1,008</td>
-                        <td>random</td>
-                        <td>data</td>
-                        <td>placeholder</td>
-                        <td>text</td>
-                    </tr>
-                    <tr>
-                        <td>1,009</td>
-                        <td>placeholder</td>
-                        <td>irrelevant</td>
-                        <td>visual</td>
-                        <td>layout</td>
-                    </tr>
-                    <tr>
-                        <td>1,010</td>
-                        <td>data</td>
-                        <td>rich</td>
-                        <td>dashboard</td>
-                        <td>tabular</td>
-                    </tr>
-                    <tr>
-                        <td>1,011</td>
-                        <td>information</td>
-                        <td>placeholder</td>
-                        <td>illustrative</td>
-                        <td>data</td>
-                    </tr>
-                    <tr>
-                        <td>1,012</td>
-                        <td>text</td>
-                        <td>placeholder</td>
-                        <td>layout</td>
-                        <td>dashboard</td>
-                    </tr>
-                    <tr>
-                        <td>1,013</td>
-                        <td>dashboard</td>
-                        <td>irrelevant</td>
-                        <td>text</td>
-                        <td>visual</td>
-                    </tr>
-                    <tr>
-                        <td>1,014</td>
-                        <td>dashboard</td>
-                        <td>illustrative</td>
-                        <td>rich</td>
-                        <td>data</td>
-                    </tr>
-                    <tr>
-                        <td>1,015</td>
-                        <td>random</td>
-                        <td>tabular</td>
-                        <td>information</td>
-                        <td>text</td>
-                    </tr>
-                    </tbody>
+                <table class="table table-striped table-sm" id="holdingsTable">
                 </table>
             </div>
-        </main>
+        {% endif %}
+
+        {% if has_transactions %}
+            {% if not has_holdings %}
+                <h3 class="text-center mt-5 mb-5">Your portfolio does not have any holdings!</h3>
+            {% endif %}
+            <!-- transaction history -->
+            <table class="table table-striped" id="transactionsTable">
+            </table>
+        {% else %}
+            <h1 class="text-center mt-5 mb-5">Buy something first to track your portfolio!</h1>
+        {% endif %}
     {% else %}
+        <!-- prompt user to create portfolio -->
         <div class="px-4 py-5 my-5 text-center">
             <h1 class="display-5 fw-bold text-body-emphasis">Hi, {{ username }}</h1>
             <div class="col-lg-6 mx-auto">
@@ -165,6 +86,7 @@
                 <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                     <a type="button" class="btn btn-outline-secondary btn-lg px-4 mr-3" id="rules" href="/rules">Game Rules</a>
                     <form method="POST">
+                        <input type="hidden" name="create_portfolio" value="create user portfolio">
                         <button type="submit" class="btn btn-primary btn-lg px-4 gap-3" id="createProfile">Create Profile</button>
                     </form>
                 </div>
