--- a/src/webapp/templates/portfolio_sim/buy.html
+++ b/src/webapp/templates/portfolio_sim/buy.html
@@ -44,6 +44,7 @@
                     <input type="hidden" name="price" id="price" value="{{ info.price }}">
                     <input type="hidden" name="currency" id="currency" value="{{ info.currency }}">
                     <input type="hidden" name="name" id="name" value="{{ info.company_name }}">
+                    <input type="hidden" name="open" id="open" value="{{ info.open }}">
                 </div>
                 <div class="d-flex justify-content-between button-container" role="group" aria-label="Buy Options">
                     <a href="/dashboard" type="button" class="btn btn-secondary">Cancel</a>
