--- a/src/webapp/templates/base.html
+++ b/src/webapp/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <link rel="icon" href="../static/icons/funance_logo.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <title>{% block title %} {% endblock %}</title>
@@ -67,7 +68,10 @@
     <!-- footer -->
       <footer class="container footer d-flex flex-wrap justify-content-between py-3 border-top sticky-bottom">
         <div class="col-md-4 d-flex align-items-center">
-          <span class="mb-3 mb-md-0 text-body-secondary">2024 FUNance v0.1</span>
+          <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+            <img src="../static/icons/funance_logo.jpg" alt="FUNance logo" width="24" height="24">
+          </a>
+          <span class="mb-3 mb-md-0 text-body-secondary">&copy; 2024 FUNance v1.0.0</span>
         </div>
     
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
@@ -97,7 +101,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-
+    <script src="https://cdn.plot.ly/plotly-2.29.1.min.js" charset="utf-8"></script>
+    
     <script src="../static/scripts/index.js" defer></script>
     {% block scripts %} {% endblock %}
   </body>
