--- a/src/webapp/templates/portfolio_sim/dashboard.html
+++ b/src/webapp/templates/portfolio_sim/dashboard.html
@@ -15,37 +15,61 @@
         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
             <h1 class="h1">{{ username }}'s Portfolio</h1>
             <div class="btn-toolbar mb-2 mb-md-0 button-container">
-                <div class="btn-group mr-5">
-                    <button type="button" class="btn btn-lg btn-outline-secondary" onclick="openBuyPopup()">Buy Stocks</button>
-                    <!-- buy popup -->
-                    <div class="modal" id="buyPopup">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h4 class="modal-title">Buy Stonks!</h4>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <p>Please enter the ticker:</p>
+                <button type="button" class="btn btn-lg btn-outline-secondary" onclick="openBuyPopup()">Buy Stocks</button>
+                <!-- buy popup -->
+                <div class="modal" id="buyPopup">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h4 class="modal-title">Buy Stonks!</h4>
+                            </div>
+                            <div class="modal-body">
+                                <p>Please enter the ticker:</p>
 
-                                    <form method="POST">
-                                        <div class="form-floating mb-4">
-                                            <input type="text" class="form-control" id="ticker" name="ticker" placeholder="Stock Ticker" required>
-                                            <label for="ticker">Stock Ticker</label>
-                                        </div>
-                                        <div class="d-flex justify-content-end button-container">
-                                            <button type="button" class="btn btn-secondary mr-3" data-bs-dismiss="modal">Close</button>
-                                            <button type="submit" class="btn btn-primary">Buy Stock</button>
-                                        </div>
-
-                                    </form>
-                                </div>
+                                <form method="POST">
+                                    <div class="form-floating mb-4">
+                                        <input type="text" class="form-control" id="ticker" name="ticker" placeholder="Stock Ticker" required>
+                                        <label for="ticker">Stock Ticker</label>
+                                    </div>
+                                    <div class="d-flex justify-content-end button-container">
+                                        <button type="button" class="btn btn-secondary mr-3" data-bs-dismiss="modal">Close</button>
+                                        <button type="submit" class="btn btn-primary">Buy Stock</button>
+                                    </div>
+                                </form>
                             </div>
                         </div>
                     </div>
-
-                    <button type="button" class="btn btn-lg btn-outline-secondary">Sell Shares</button>
                 </div>
+
+                <button type="button" class="btn btn-lg btn-outline-secondary" onclick="openSellPopup()">Sell Shares</button>
+                <!-- sell popup -->
+                <div class="modal" id="sellPopup">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h4 class="modal-title">Sell Shares!</h4>
+                            </div>
+                            <div class="modal-body">
+                                {% if has_holdings %}
+                                    <form method="POST">
+                                        <div class="mb-4">
+                                            <label for="sellDropdown" class="form-label mb-3">What would you like to sell...</label>
+                                            <select class="form-control" id="sellDropdown" name="sellDropdown">
+                                            </select>
+                                        </div>
+                                        <div class="d-flex justify-content-end button-container">
+                                            <button type="button" class="btn btn-secondary mr-3" data-bs-dismiss="modal">Close</button>
+                                            <button type="submit" class="btn btn-primary">Continue</button>
+                                        </div>
+                                    </form>
+                                {% else %}
+                                    <h4 class="text-center">You do not own anything to sell!</h4>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <button type="button" class="btn btn-lg btn-outline-secondary">Ticker Lookup</button>
             </div>
         </div>
@@ -60,12 +84,13 @@
         
         {% if has_holdings %}
             <!-- portfolio plot  -->
-            <canvas class="my-4 w-100" id="portfolioPlot" width="816" height="344" style="display: block; box-sizing: border-box; height: 275px; width: 652px;"></canvas>
+            <div class="my-4 w-100" id="historyPlot" style="display: block; box-sizing: border-box; height: 500px;"></div>
             
             <!-- portfolio holdings -->
-            <h3>Portfolio Breakdown</h3>
-            <table class="table table-striped table-hover table-dark" id="holdingsTable">
-            </table>
+            <div class="container w-100">
+                <h3 class="mt-5">Portfolio Breakdown</h3>
+                <table class="table table-striped table-hover table-dark" id="holdingsTable"></table>
+            </div>
         {% endif %}
 
         {% if has_transactions %}
@@ -73,9 +98,10 @@
                 <h3 class="text-center mt-5 mb-5">Your portfolio does not have any holdings!</h3>
             {% endif %}
             <!-- transaction history -->
-            <h3 class="mt-5">Transaction History</h3>
-            <table class="table table-striped table-hover table-dark" id="transactionsTable">
-            </table>
+            <div class="container w-100">
+                <h3 class="mt-5">Transaction History</h3>
+                <table class="table table-striped table-hover table-dark" id="transactionsTable"></table>
+            </div>
         {% else %}
             <h1 class="text-center mt-5 mb-5">Buy something first to track your portfolio!</h1>
         {% endif %}
