--- a/src/webapp/templates/portfolio_sim/dashboard.html
+++ b/src/webapp/templates/portfolio_sim/dashboard.html
@@ -70,7 +70,31 @@
                     </div>
                 </div>
 
-                <button type="button" class="btn btn-lg btn-outline-secondary">Ticker Lookup</button>
+                <button type="button" class="btn btn-lg btn-outline-secondary" onclick="openSearchPopup()">Ticker Lookup</button>
+                <!-- ticker search popup -->
+                <div class="modal" id="searchPopup">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h4 class="modal-title">Look up a Stock's Performance!</h4>
+                            </div>
+                            <div class="modal-body">
+                                <p>Please enter the ticker:</p>
+
+                                <form method="POST">
+                                    <div class="form-floating mb-4">
+                                        <input type="text" class="form-control" id="searchTicker" name="searchTicker" placeholder="Ticker" required>
+                                        <label for="searchTicker">Stock Ticker</label>
+                                    </div>
+                                    <div class="d-flex justify-content-end button-container">
+                                        <button type="button" class="btn btn-secondary mr-3" data-bs-dismiss="modal">Close</button>
+                                        <button type="submit" class="btn btn-primary">Search</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
