--- a/src/webapp/templates/portfolio_sim/buy.html
+++ b/src/webapp/templates/portfolio_sim/buy.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Buy Stocks{% endblock %} 
+{% block title %}Buy {{ticker}}{% endblock %} 
 
 {% block content%}
 <div class="container mt-5">
