--- a/src/webapp/templates/portfolio_sim/dashboard.html
+++ b/src/webapp/templates/portfolio_sim/dashboard.html
@@ -101,7 +101,7 @@
         <!-- portfolio value -->
         <div class="mt-4 mb-3 container">
             <h2 class="text-center">Your portfolio is worth <strong>${{ portfolio_value }}</strong></h2>
-            <h6 class="text-center" data-toggle="tooltip" data-placement="bottom" title="Portfolio values are updated every hour"> 
+            <h6 class="text-center" data-toggle="tooltip" data-placement="bottom" title="Portfolio values are updated every 30 minutes when the market is open"> 
                 <u>As of <strong>{{ update_time }}</strong></u>
             </h6>
         </div>
