--- a/src/webapp/templates/portfolio_sim/rules.html
+++ b/src/webapp/templates/portfolio_sim/rules.html
@@ -20,7 +20,8 @@
                 - No comissions or fees when buying/selling <br>
                 - No partial shares allowed <br>
                 - Trades are assumed to be instant, and will be executed at quoted price.<br>
-                - If buying/selling after market close, closing price will be used.<br> <br>
+                - If buying/selling after market close, closing price will be used.<br>
+                - All times displayed are in EST unless otherwise stated. <br> <br>
                 * Note currency conversion is still a work in progress. The default currency is USD, so if you buy any foreign stocks, there will be errors...
             </p>
         </div>
