--- a/src/webapp/templates/portfolio_sim/leaderboard.html
+++ b/src/webapp/templates/portfolio_sim/leaderboard.html
@@ -3,9 +3,36 @@
 {% block title %}Leaderboard{% endblock %} 
 
 {% block content%}
-    <div class="container my-5">
-        <div class="p-5 bg-body-tertiary rounded-3">
-            <h1 class="text-body-emphasis text-center">- LEADERBOADRD -</h1>
-        </div>
+    <!-- data -->
+    <div id="data-container"
+        data-top-performers="{{ top_performers }}"
+        data-daily-performers="{{ top_daily_performers }}"
+        data-history="{{ performance_history }}">
     </div>
+
+    <div class="p-5 bg-body-tertiary rounded-3 my-5">
+        <h1 class="text-body-emphasis text-center">- Leaderboard -</h1>
+        <h6 class="text-center" data-toggle="tooltip" data-placement="bottom" title="Portfolio values are updated every 30 minutes when the market is open"> 
+            <u>Last Updated: <strong>{{ update_time }}</strong></u>
+        </h6>
+
+        <div class="my-4 w-100" id="historyPlot" style="display: block; box-sizing: border-box; height: 500px;"></div>
+
+        <div class="container w-100 my-4">
+            <h3 class="mt-5">Top Performing Portfolios</h3>
+            <table class="table table-striped table-hover table-dark my-3" id="topPerformersTable"></table>
+        </div>
+
+        <div class="container w-100 my-4">
+            <h3 class="mt-5">Todays Top Growers</h3>
+            <div class="table-responsive">
+                <table class="table table-striped table-hover table-dark my-3" id="dailyPerformersTable"></table>
+            </div>
+        </div>
+        
+    </div>
+{% endblock %}
+
+{% block scripts %}
+    <script src="../../static/scripts/leaderboard.js"></script>
 {% endblock %}
