--- a/src/webapp/templates/portfolio_sim/sell.html
+++ b/src/webapp/templates/portfolio_sim/sell.html
@@ -5,7 +5,7 @@
 {% block content%}
 <div class="container mt-5">
     <div class="p-5 bg-body-tertiary rounded-3 mt-3 mb-3">
-        <h1 class="text-center"><strong>{{ info.name }}</strong> <br><br></h1>
+        <h1 class="text-center">SELL: <strong>{{ info.name }}</strong> <br><br></h1>
         <h3 class="text-center">As of {{ time }}, the price of <strong>{{ info.ticker }}</strong> is <strong>${{ current_price }} {{ info.currency }}</strong> <br><br></h3>
 
         <div class="container mt-3 w-50">
