--- a/src/webapp/templates/portfolio_sim/search.html
+++ b/src/webapp/templates/portfolio_sim/search.html
@@ -48,20 +48,22 @@
     <!-- History plot -->
     <div class="my-3 w-100" id="historyPlot" style="display: block; box-sizing: border-box; height: 500px;"></div>
 
-
-    <table class="table table-striped table-dark" id="performanceTable">
-        <h4 class="mt-5">Performance Summary</h4>
-        <tr>
-            {% for key, value in performance.items() %}
-                <th scope="col">{{ key }}</th>
-            {% endfor %}
-        </tr>
-        <tr>
-            {% for key, value in performance.items() %}
-                <td>{{ value }}</td>
-            {% endfor %}
-        </tr>
-    </table>
+    <div class="table-responsive">
+        <table class="table table-striped table-dark" id="performanceTable">
+            <h4 class="mt-5">Performance Summary</h4>
+            <tr>
+                {% for key, value in performance.items() %}
+                    <th scope="col">{{ key }}</th>
+                {% endfor %}
+            </tr>
+            <tr>
+                {% for key, value in performance.items() %}
+                    <td>{{ value }}</td>
+                {% endfor %}
+            </tr>
+        </table>
+    </div>
+    
 </div>
 {% endblock %}
 
