add comments and remove debug code

--- a/src/webapp/templates/portfolio_sim/rules.html
+++ b/src/webapp/templates/portfolio_sim/rules.html
@@ -10,9 +10,12 @@
             <p class="lead">
                 You will be given some starting funds <small>(this money is fake and cannot be withdrawn)</small> to invest in the financial market. Currently, this only includes equity investments (aka stocks). Fixed income assets such as bonds and derivatives such as options are not included (yet???). Also, no shorting. ETFs are allowed as long as it is traded on a stock market. <br><br>
                 
-                Track your performance over time and Buy/Sell your way to victory! Assert your finance bro dominance by out-performing other peoples portfolios! <br> <br>
+                Track your performance over time and Buy/Sell your way to victory! Assert your dominance as a finance bro by out-performing other peoples portfolios! <br> <br>
 
-                To get started, just sign up (if you haven't already) and create your profile! <br>
+                To get started, just sign up and initiate your portfolio --> <a class="btn btn-info btn-lg my-4" id="rules" href="/dashboard">My Portfolio</a> 
+
+                <br>
+
             </p>
             <p class="lead d-flex justify-content-center">
                 <b>Details:</b><br>
