--- a/src/webapp/templates/base.html
+++ b/src/webapp/templates/base.html
@@ -7,13 +7,14 @@
     <link rel="icon" href="../static/icons/funance_logo.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
-    <title>{% block title %} {% endblock %}</title>
-
     <link type="text/css" rel="stylesheet" href="../static/styles/main.css">
+
+    {% block styles %} {% endblock %}
+
+    <title>{% block title %} {% endblock %}</title>
   </head>
 
   <body class="d-flex flex-column h-100">
-
     <!-- navigation bar -->
     <header class="p-3 text-bg-dark">
       <div class="container">
@@ -22,8 +23,8 @@
           <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
             <li><a href="/" class="nav-link px-2 text-white" id="home">Home</a></li>
             <li><a href="/rules" class="nav-link px-2 text-secondary" id="rules">Game Rules</a></li>
+            <li><a href="/leaderboard" class="nav-link px-2 text-secondary" id="leaderboard">Leaderboard</a></li>
             {% if user.is_authenticated %}
-              <li><a href="/leaderboard" class="nav-link px-2 text-secondary" id="leaderboard">Leaderboard</a></li>
               <li><a href="/dashboard" class="nav-link px-2 text-secondary" id="dashboard">My Portfolio</a></li>
             {% endif %}
           </ul>
@@ -40,9 +41,8 @@
       </div>
     </header>
 
-    <!-- alert flashing -->
+    <!-- backend message flashing -->
     <div class="container" id="alertMessage">
-      <!-- backend message flashing -->
       {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
           {% for category, message in messages %}
@@ -62,6 +62,7 @@
       {% endwith %}
     </div>
 
+    <!-- page content -->
     <main class="container flex-shrink-0 content">
       {% block content %} {% endblock %}
     </main>
