--- a/src/webapp/templates/home.html
+++ b/src/webapp/templates/home.html
@@ -9,9 +9,18 @@
             <div class="col-lg-6 mx-auto mt-5">
                 <p class="fs-5 mb-5">
                     This project is a work in progress, so expect more features and content to come! Better yet, let me know if you have any feedback regarding improvements or suggestions on potential features. <small>(Feedback form is still in the todo backlog so just message me for now...)</small> <br><br>
-
+                    
                     <strong>Together, we can make finance FUN again!</strong>
                 </p>
+
+                <div class="mt-5">
+                    <p class="fs-5 mb-5">
+                        Currently, the main feature consists of a portfolio simulation game: Race your friends to see who can make the most GAINS!<br>
+
+                        <strong>To get started, check out the game rules</strong><br>
+                        <a class="btn btn-info btn-lg mt-4" id="rules" href="/rules">Game Rules</a>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
