--- a/src/webapp/templates/authentication/login.html
+++ b/src/webapp/templates/authentication/login.html
@@ -22,7 +22,11 @@
           Remember me
         </label>
       </div>
-      <button class="btn btn-primary w-100 py-2 mb-5" type="submit">Sign in</button>
+      <button class="btn btn-primary w-100 py-2 mb-3" type="submit">Sign in</button>
     </form>
+
+    <div class="text-center">
+      <a href="/sign-up">Don't have an account?</a>
+    </div>
   </main>
 {% endblock %}
