--- a/src/webapp/templates/authentication/sign_up.html
+++ b/src/webapp/templates/authentication/sign_up.html
@@ -23,7 +23,11 @@
         <input type="password" class="form-control" id="password2" name="password2" required>
         <label for="password2">Confirm Password</label>
       </div>
-      <button class="btn btn-primary w-100 py-2 mb-5" type="submit">Create Account</button>
+      <button class="btn btn-primary w-100 py-2 mb-3" type="submit">Create Account</button>
     </form>
+
+    <div class="text-center">
+      <a href="/login">Already have an account?</a>
+    </div>
   </main>
 {% endblock %}
