--- a/src/webapp/templates/portfolio_sim/leaderboard.html
+++ b/src/webapp/templates/portfolio_sim/leaderboard.html
@@ -20,7 +20,9 @@
 
         <div class="container w-100 my-4">
             <h3 class="mt-5">Top Performing Portfolios</h3>
-            <table class="table table-striped table-hover table-dark my-3" id="topPerformersTable"></table>
+            <div class="table-responsive">
+                <table class="table table-striped table-hover table-dark my-3" id="topPerformersTable"></table>
+            </div>
         </div>
 
         <div class="container w-100 my-4">
